# example_cpp_python_wrapper

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  article.md  python_test.py  setup.py
cpp/: CMakeLists.txt
cpp/include/my_lib/: my_include_file.h
cpp/src/: my_cpp_file.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test_cpp.cpp
docker/: Dockerfile  docker-compose.yml
docker/env/: .env
python/: python_header.h  python_src.cpp
